--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
     "            logger.info(f'{filename} download! with following info: \\n{headers}')\n",
     "        else:\n",
     "            logger.info(f'File already exists of size: {get_size(Path(self.config.local_data_file))}')\n",
-    "\n",
+    "            \n",
     "    def extract_zip_file(self):\n",
     "        \"\"\"\n",
     "        zip_file_path: str\n",
@@ -167,42 +167,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-04 22:23:01,241: INFO: common: yaml file: config\\config.yaml load successfully]\n",
-      "[2024-05-04 22:23:01,244: INFO: common: yaml file: params.yaml load successfully]\n",
-      "[2024-05-04 22:23:01,247: INFO: common: Created directory: artifacts]\n",
-      "[2024-05-04 22:23:01,249: INFO: common: Created directory: artifacts/data_ingestion]\n",
-      "[2024-05-04 22:23:09,630: INFO: 1995198703: artifacts/data_ingestion/data.zip download! with following info: \n",
+      "[2024-05-11 07:37:16,400: INFO: common: yaml file: config\\config.yaml load successfully]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-05-11 07:37:16,422: INFO: common: yaml file: params.yaml load successfully]\n",
+      "[2024-05-11 07:37:16,424: INFO: common: Created directory: artifacts]\n",
+      "[2024-05-11 07:37:16,428: INFO: common: Created directory: artifacts/data_ingestion]\n",
+      "[2024-05-11 07:37:20,107: INFO: 1995198703: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
-      "Content-Length: 7903594\n",
+      "Content-Length: 8903934\n",
       "Cache-Control: max-age=300\n",
       "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
       "Content-Type: application/zip\n",
-      "ETag: \"dbc016a060da18070593b83afff580c9b300f0b6ea4147a7988433e04df246ca\"\n",
+      "ETag: \"a020704f8af4508ac875a9aab0ac47db8378464a63f99a88fcaee103302dd223\"\n",
       "Strict-Transport-Security: max-age=31536000\n",
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 0B38:166676:4003F9:515231:663652D5\n",
+      "X-GitHub-Request-Id: 4D7A:1DB7E4:2E1694:399C7E:663EBDBE\n",
       "Accept-Ranges: bytes\n",
-      "Date: Sat, 04 May 2024 15:23:03 GMT\n",
+      "Date: Sat, 11 May 2024 00:37:19 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-qpg1260-QPG\n",
+      "X-Served-By: cache-qpg1272-QPG\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1714836182.445774,VS0,VE628\n",
+      "X-Timer: S1715387838.287290,VS0,VE820\n",
       "Vary: Authorization,Accept-Encoding,Origin\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 9afe8c044d4dc589dfb53b1cf2ead31270228e64\n",
-      "Expires: Sat, 04 May 2024 15:28:03 GMT\n",
-      "Source-Age: 0\n",
+      "X-Fastly-Request-ID: cf36c35b5cf7c06708f95947c1ffdd661d2e291f\n",
+      "Expires: Sat, 11 May 2024 00:42:19 GMT\n",
+      "Source-Age: 1\n",
       "\n",
       "]\n"
      ]
