--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "'c:\\\\Users\\\\NgLaam\\\\Desktop\\\\chatbot\\\\text-summarization'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,18 +96,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import os\n",
+    "import fnmatch\n",
     "from text_summarizer.logging import logger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,10 +121,11 @@
     "        try:\n",
     "            validation_status = None\n",
     "\n",
-    "            all_files = os.listdir(os.path.join(\"artifacts\",\"data_ingestion\",\"samsum_dataset\"))\n",
+    "            all_files = os.listdir(os.path.join(\"artifacts\",\"data_ingestion\"))\n",
     "\n",
     "            for file in all_files:\n",
-    "                if file not in self.config.ALL_REQUIRED_FILES:\n",
+    "                if fnmatch.fnmatch(file, self.config.ALL_REQUIRED_FILES):\n",
+    "                    print(file)\n",
     "                    validation_status = False\n",
     "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
     "                        f.write(f\"Validation status: {validation_status}\")\n",
@@ -141,17 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-05 12:45:50,242: INFO: common: yaml file: config\\config.yaml load successfully]\n",
-      "[2024-05-05 12:45:50,267: INFO: common: yaml file: params.yaml load successfully]\n",
-      "[2024-05-05 12:45:50,270: INFO: common: Created directory: artifacts]\n",
-      "[2024-05-05 12:45:50,272: INFO: common: Created directory: artifacts/data_validation]\n"
+      "[2024-05-11 07:53:38,720: INFO: common: yaml file: config\\config.yaml load successfully]\n",
+      "[2024-05-11 07:53:38,725: INFO: common: yaml file: params.yaml load successfully]\n",
+      "[2024-05-11 07:53:38,727: INFO: common: Created directory: artifacts]\n",
+      "[2024-05-11 07:53:38,729: INFO: common: Created directory: artifacts/data_validation]\n"
      ]
     }
    ],
