--- a/research/prediction.ipynb
+++ b/research/prediction.ipynb
@@ -2,23 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
-    "\n",
-    "model_ckpt = 'minhtoan/t5-small-wikilingua-vietnamese'\n",
-    "\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_ckpt)\n",
-    "\n",
-    "## Save tokenizer\n",
-    "tokenizer.save_pretrained(\"artifacts/model_trainer/tokenizer\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +11,7 @@
        "'c:\\\\Users\\\\NgLaam\\\\Desktop\\\\chatbot\\\\text-summarization'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,9 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\NgLaam\\Desktop\\chatbot\\text-summarization\\.venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
     "from datasets import load_from_disk\n",
@@ -63,17 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Token indices sequence length is longer than the specified maximum sequence length for this model (1715 > 1024). Running this sequence through the model will result in indexing errors\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Prediction\n",
     "\n",
@@ -90,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +100,7 @@
       "Hiện nay nhiều trẻ em hay chúi mũi vào màn hình điện thoại , máy tính bảng , tivi , ảnh hưởng rất lớn đến sức khoẻ , nhất là mắt .\n",
       "\n",
       "Model Summary:\n",
-      "ly mean here happen here G station here Thatamb education got Global place plans 7 here G station here Thatamb education got Global place plans 7 here G station here Thatamb education got Global place plans 7 here G station here Thatamb education got Global place plans 7 here G station here Thatamb education got Global place plans 7 here G station here Thatamb education got Global place plans 7 here G station here Thatamb education got Global place plans 7 here G station here Thatamb education got Global place plans 7 here G station here Thatamb education got Global place plans 7 here G station here Thatamb education got Global place plans 7 here G station\n"
+      "Giáo sư Craig Anderson - giáo sư về sinh lý học Đại học bang Iowa - nói: \"Có rất nhiều tác động tiềm ẩn từ màn hình có hại đến trẻ sơ sinh tới thanh thiếu niên và cả người lớn còn trẻ\", chúng có thể ngạc nhiên vì sao các quy tắc của bạn lại khác nhau.\n"
      ]
     }
    ],
